--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                 <div style="display: none;" id="game_iframe" class="fixed inset-0 flex items-center justify-center z-50 max-sm:hidden">
                     <div class="absolute inset-0 w-screen bg-black/70 backdrop-blur-sm z-40"></div> 
                     <div class="relative z-50 w-11/12 md:w-3/4 h-3/4 bg-white rounded-lg">
-                        <iframe scrolling="no" src="" frameborder="0" class="w-full h-full border-0"></iframe>
+                        <iframe scrolling="no" src="https://delightful-semolina-2b94e0.netlify.app" frameborder="0" class="w-full h-full border-0"></iframe>
                         <button style="cursor: pointer;" onclick="view('game_iframe', 'projects')" class="absolute -top-6 -right-20 transition_button "><img src="/src/media/button_sair.png" alt="" class="h-16 opacity-100 hover:opacity-85"></button>
                     </div>
                 </div>
