New icon in mobile

--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@
         
         <!--Menu Mobile-->
         <div class="max-sm:flex hidden">
-            <a href="/" class="absolute top-2 left-4 shadow-xs">
-                <h1 class="text-white text-3xl font-cherolina">RL</h1>
+            <a href="/" class="absolute top-1 left-4 shadow-xs">
+                <!--<h1 class="text-white text-3xl font-cherolina">RL</h1>-->
+                <img src="/src/media/icon.png" alt="RL" class="h-10 w-10">
+
             </a>
 
             <div style="display: none" id="menu_mobile" class="flex flex-col h-screen gap-1 absolute top-0 right-0 bg-indigo-700 pt-14 pr-8 pl-3 shadow-lg">
