Adding Google Tag Manager

--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" class="h-full">
 <head>
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-MBQ7LPSH');</script>
+    <!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ruan Lima | Portfólio</title>
@@ -22,6 +29,10 @@
     }
 </style>
 <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MBQ7LPSH"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <header id="header" class="fixed z-999 h-12 w-full transition-colors duration-300 pt-[2px]">
         <div class="relative top-1 animate-fade-fall max-sm:hidden">
 
@@ -132,7 +143,7 @@
                 <div id="txt_about1" class="mt-6 opacity-0">
                     <h1 class="text-indigo-600 text-xl font-coolvetica">Quem sou eu</h1>
                     <hr class="text-slate-300 mt-1">
-                    <p class="font-light text-slate-500 text-lg mt-2">Sou um jovem de 18 anos, residente no estado de Alagoas, Brasil, apaixonado por música, tecnologia e inovação e busco constantemente aprender e explorar novas áreas do conhecimento. Frequentei a maior parte da minha vida escolar em instituições públicas, mas isso não foi um impedimento para me destacar nas ciências exatas ou tecnológicas. Mesmo após terminar o ensino médio, continuo focado em adquirir novos conhecimentos e me aprimorar ainda mais na programação.
+                    <p class="font-light text-slate-500 text-lg mt-2">Sou um jovem de 18 anos, residente em Maceió-AL, apaixonado por música, tecnologia e inovação e busco constantemente aprender e explorar novas áreas do conhecimento. Frequentei a maior parte da minha vida escolar em instituições públicas, mas isso não foi um impedimento para me destacar nas ciências exatas ou tecnológicas. Mesmo após terminar o ensino médio, continuo focado em adquirir novos conhecimentos e me aprimorar ainda mais na programação.
                     </p>
                 </div>
                 <img id="img_about1" src="/src/media/IMG1.jpg" alt="Campus Party Nordeste 2024" class="hidden max-sm:flex h-auto rounded-lg opacity-0">
