Just mild design changes

--- a/index.html
+++ b/index.html
@@ -147,14 +147,14 @@
 
             <!--Summary one-->
             <div class="max-sm:flex-col inline-flex gap-10">
-                <img id="img_about1" src="/src/media/IMG1.jpg" alt="Campus Party Nordeste 2024" class="max-sm:hidden h-[30rem] rounded-lg max-w-[60rem] opacity-0">
+                <img id="img_about1" src="/src/media/IMG1.jpg" alt="Campus Party Nordeste 2024" class="max-sm:hidden h-[30rem] rounded-md max-w-[60rem] opacity-0">
                 <div id="txt_about1" class="mt-6 opacity-0">
                     <h1 class="text-indigo-600 text-xl font-coolvetica">Quem sou eu</h1>
                     <hr class="text-slate-300 mt-1">
                     <p class="font-light text-slate-500 text-lg mt-2">Sou um jovem de 18 anos, residente em Maceió-AL, apaixonado por música, tecnologia e inovação e busco constantemente aprender e explorar novas áreas do conhecimento. Frequentei a maior parte da minha vida escolar em instituições públicas, mas isso não foi um impedimento para me destacar nas ciências exatas ou tecnológicas. Mesmo após terminar o ensino médio, continuo focado em adquirir novos conhecimentos e me aprimorar ainda mais na programação.
                     </p>
                 </div>
-                <img id="img_about1" src="/src/media/IMG1.jpg" alt="Campus Party Nordeste 2024" class="hidden max-sm:flex h-auto rounded-lg opacity-0">
+                <img id="img_about1" src="/src/media/IMG1.jpg" alt="Campus Party Nordeste 2024" class="hidden max-sm:flex h-auto rounded-md opacity-0">
 
             </div>
 
@@ -168,13 +168,13 @@
                     <p class="font-light text-slate-500 text-lg">Além disso, tive a oportunidade de competir em desafios de empreendedorismo, como o <span class="text-[#FF6D00] font-semibold text-base">Desafio Liga Jovem</span>, onde tive a experiência de desenvolver um jogo do zero, ao lado colegas da minha escola. Embora não me considere um desenvolvedor de jogos, essa vivência me permitiu explorar novas ferramentas como a Unity e a linguagem C#, agregando novos conhecimentos ao meu repertório técnico.
                     </p>
                 </div>
-                <img id="img_about2" src="/src/media/IMG2.jpg" alt="Trakto Show 2024" class="h-[30rem] max-sm:h-auto rounded-lg opacity-0">
+                <img id="img_about2" src="/src/media/IMG2.jpg" alt="Trakto Show 2024" class="h-[30rem] max-sm:h-auto rounded-md opacity-0">
 
             </div>
 
             <!--Summary three-->
             <div class="max-sm:flex-col inline-flex gap-10 mt-20">
-                <img id="img_about3" src="/src/media/IMG3.jpg" alt="Novo Ensino Suplementar" class="max-sm:hidden h-[30rem] rounded-lg opacity-0">
+                <img id="img_about3" src="/src/media/IMG3.jpg" alt="Novo Ensino Suplementar" class="max-sm:hidden h-[30rem] rounded-md opacity-0">
                 <div id="txt_about3" class="mt-6 opacity-0">
                     <h1 class="text-indigo-600 text-xl font-coolvetica">Formação Acadêmica e Olimpíadas</h1>
                     <hr class="text-slate-300 mt-1">
@@ -183,7 +183,7 @@
                     <p class="font-light text-slate-500 text-lg">Em 2023, ingressei em um centro de excelência em matemática e programação na Universidade Federal de Alagoas: <a href="https://sites.google.com/view/nes-alagoas" target="_blank" rel="noopener noreferrer" class="text-[#FF6D00] font-semibold text-base hover:underline">Novo Ensino Suplementar</a>. Esse ambiente foi determinante para minha paixão pela programação, permitindo-me conviver com pessoas que compartilham o mesmo desejo de evolução, além de aprender com profissionais renomados de todo o Brasil e do mundo. 
                     </p>
                 </div>
-                <img id="img_about3" src="/src/media/IMG3.jpg" alt="Novo Ensino Suplementar" class="hidden max-sm:flex h-auto rounded-lg opacity-0">
+                <img id="img_about3" src="/src/media/IMG3.jpg" alt="Novo Ensino Suplementar" class="hidden max-sm:flex h-auto rounded-md opacity-0">
 
             </div>
 
@@ -199,7 +199,7 @@
                     <p class="font-light text-slate-500 text-lg">Meu objetivo é continuar crescendo na área de tecnologia, ingressar no mercado de trabalho e aproveitar as oportunidades para expandir meu conhecimento. Estou sempre aberto a desafios que me permitam evoluir e desenvolver novas habilidades.
                     </p>
                 </div>
-                <img id="img_about4" src="/src/media/IMG4.jpg" alt="Giulia Bordignon" class="h-[30rem] max-sm:h-auto rounded-lg opacity-0">
+                <img id="img_about4" src="/src/media/IMG4.jpg" alt="Giulia Bordignon" class="h-[30rem] max-sm:h-auto rounded-md opacity-0">
 
             </div>
             
@@ -308,7 +308,7 @@
                 <div class="fixed inset-0 w-screen bg-black/93 flex items-center justify-center backdrop-blur-[1px] z-0"></div>
                 
                     <div class="fixed inset-0">
-                        <div id="certificados_list" class="grid grid-cols-4 max-sm:grid-cols-1 gap-6 mx-24 max-sm:mx-4 my-10 max-sm:my-14 overflow-y-auto scrollbar-hide h-[90vh] pt-5  px-5 bg-transparent">
+                        <div id="certificados_list" class="grid grid-cols-4 max-sm:grid-cols-1 gap-6 mx-24 max-sm:mx-4 my-10 max-sm:my-18 overflow-y-auto scrollbar-hide h-[90vh] pt-5  px-5 bg-transparent">
                             <img style="cursor: pointer;" id="nes" onclick="view_certificate(this.id)" src="/src/media/certificados/cert_nes.jpg" alt="Programação Básica NES" class="certificado">
                             <img style="cursor: pointer;" id="slq1" onclick="view_certificate(this.id)" src="/src/media/certificados/cert_sql1.jpg" alt="SQL DIO" class="certificado">
                             <img style="cursor: pointer;" id="python"  onclick="view_certificate(this.id)" src="/src/media/certificados/cert_python.jpg" alt="Ciência de Dados Python" class="certificado">
@@ -645,7 +645,7 @@
 
     <section id="contact" class="h-[15rem] bg-slate-900 flex-col text-center  z-10">
         <div class="inline-flex max-sm:flex max-sm:flex-col gap-5 items-center mt-24 max-sm:mt-0 max-sm:p-12">
-            <button class="bg-slate-950 rounded-full px-5 py-2 flex items-center hover:-translate-y-1 hover:bg-black/67">
+            <button class="bg-slate-950 rounded-full px-5 py-2 flex items-center transition hover:-translate-y-1 hover:bg-black/67">
                 <a href="https://github.com/ruanllima" target="_blank" rel="noopener noreferrer" class="font-nexa max-sm:font-light  text-slate-100 inline-flex items-center gap-1 max-sm:text-xs">
                     <svg class="invert h-5 w-5">
                         <image href="/src/media/GitHub.png" width="100%" height="100%"></image>
@@ -653,7 +653,7 @@
                 </a>
             </button>
 
-            <button class="bg-slate-950 rounded-full px-5 py-2 flex items-center hover:-translate-y-1 hover:bg-black/67">
+            <button class="bg-slate-950 rounded-full px-5 py-2 flex items-center transition hover:-translate-y-1 hover:bg-black/67">
                 <a href="https://www.linkedin.com/in/ruan-lima-a945a127a/" target="_blank" rel="noopener noreferrer" class="font-nexa max-sm:font-light  text-slate-100 inline-flex items-center gap-1 max-sm:text-xs">
                     <svg class="invert h-5 w-5 max-sm:h-4 max-sm:w-4">
                         <image href="/src/media/linkedin.png" width="100%" height="100%"></image>
@@ -661,7 +661,7 @@
                 </a>
             </button>
 
-            <button id="copy-btn" onclick="copy_to_clipboard('ruanlimafn@gmail.com')" class="relative bg-slate-950 rounded-full px-5 py-2 items-center inline-flex gap-1 hover:-translate-y-1 hover:bg-black/67">
+            <button id="copy-btn" onclick="copy_to_clipboard('ruanlimafn@gmail.com')" class="relative bg-slate-950 rounded-full px-5 py-2 items-center inline-flex gap-1 transition hover:-translate-y-1 hover:bg-black/67">
                 <svg class="invert h-5 w-5 max-sm:h-4 max-sm:w-4">
                     <image href="/src/media/email.png" width="100%" height="100%"></image>
                 </svg>
