--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com/in/ruan-lima-a945a127a/" target="_blank" rel="noopener noreferrer" class="header_text inline-flex items-center gap-1">
+                        <a href="https://www.linkedin.com/in/ruanllima" target="_blank" rel="noopener noreferrer" class="header_text inline-flex items-center gap-1">
                             <svg class="invert h-5 w-5">
                                 <image href="/src/media/linkedin.png" width="100%" height="100%"></image>
                             </svg>Linkedin
@@ -94,7 +94,7 @@
                     </svg> Git Hub
                 </a>
         
-                <a onclick="menu_mobile()" href="https://www.linkedin.com/in/ruan-lima-a945a127a/" target="_blank" rel="noopener noreferrer" class="header_text2 inline-flex items-center gap-1">
+                <a onclick="menu_mobile()" href="https://www.linkedin.com/in/ruanllima" target="_blank" rel="noopener noreferrer" class="header_text2 inline-flex items-center gap-1">
                     <svg class="invert h-5 w-5">
                         <image href="/src/media/linkedin.png" width="100%" height="100%"></image>
                     </svg>Linkedin
@@ -583,7 +583,7 @@
             </button>
 
             <button class="bg-slate-950 rounded-full px-5 py-2 flex items-center transition hover:-translate-y-1 hover:bg-black/67">
-                <a href="https://www.linkedin.com/in/ruan-lima-a945a127a/" target="_blank" rel="noopener noreferrer" class="font-nexa max-sm:font-light  text-slate-100 inline-flex items-center gap-1 max-sm:text-xs">
+                <a href="https://www.linkedin.com/in/ruanllima" target="_blank" rel="noopener noreferrer" class="font-nexa max-sm:font-light  text-slate-100 inline-flex items-center gap-1 max-sm:text-xs">
                     <svg class="invert h-5 w-5 max-sm:h-4 max-sm:w-4">
                         <image href="/src/media/linkedin.png" width="100%" height="100%"></image>
                     </svg>Linkedin
