--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
         </div>
         
         <div class="text-8xl max-sm:text-5xl textShadowInit">
-            <h1 id="init1" class="absolute left-10 top-72 max-sm:top-40 md:top-36 max-sm:left-6 font-bold text-slate-100 opacity-0">I'm just</h1>
-            <div class="inline-flex absolute left-10 top-96 max-sm:top-56 md:top-[222px] max-sm:left-6 gap-3">
+            <h1 id="init1" class="absolute left-10 top-[37vh] max-sm:top-40 max-lg:top-36 max-sm:left-6 font-bold text-slate-100 opacity-0">I'm just</h1>
+            <div class="inline-flex absolute left-10 top-[50vh] max-sm:top-56 max-lg:top-[222px] max-sm:left-6 gap-3">
                 <h1 id="init2" class="font-bold text-slate-100 opacity-0">a</h1>
                 <h1 id="init3" class=" font-bold text-[#ffbf00] opacity-0">young dev.</h1>
             </div>
@@ -462,25 +462,25 @@
 
             <div class="flex flex-col place-content-center items-center z-50">
                 <!--Grid of skills-->
-                <div class="py-10 px-40 max-sm:px-8 max-md:px-12 md:px-20 lg:px-20 xl:px-10 grid grid-cols-3 grid-rows-3 gap-1.5 h-[40rem] w-[70rem] max-sm:h-[35rem] max-sm:w-screen max-md:w-[45rem] max-lg:w-[48rem] lg:w-[50rem]">
+                <div class="py-10 px-40 max-sm:px-4 max-md:px-10 md:px-12 lg:px-8 xl:px-1 grid grid-cols-3 grid-rows-3 gap-1.5 h-[40rem] w-[70rem] max-sm:h-[37rem] max-sm:w-screen max-md:w-[45rem] max-lg:w-[48rem] lg:w-[50rem]">
                     
                     <div class="row-span-3 grid grid-rows-4 gap-1.5">
                         <!--Python-->
                         <div id="python_skill" style="cursor: pointer;" onclick="card_skill('python_skill_1', 'python_skill_2', 'python_skill')" class="bg-[#045deb] skill_grid relative row-span-2 opacity-0">
                             <img id="python_skill_1" src="/src/media/skills/python-logo.png" alt="" class="h-20 max-sm:h-9 absolute bottom-4 -left-3 max-sm:left-0">
-                            <p style="display: none;" id="python_skill_2" class="font-light text-blue-100/80 max-sm:px-2 px-4 max-sm:text-[9px] absolute top-5 max-sm:top-2">Linguagem com maior domínio e tempo de uso. Conhecimento em diversas bibliotecas como: pandas, numpy, matplotlib, scikit-learn, além de orientação a objetos. Alguns projetos de data science e análise exploratória de dados.</p>
+                            <p style="display: none;" id="python_skill_2" class="font-light text-blue-100/80 max-sm:px-2 px-4 max-sm:text-[9px] absolute top-5 max-lg:top-2">Linguagem com maior domínio e tempo de uso. Conhecimento em diversas bibliotecas como: pandas, numpy, matplotlib, scikit-learn, além de orientação a objetos. Alguns projetos de data science e análise exploratória de dados.</p>
                         </div>
 
                         <div class="grid grid-rows-2 gap-1.5 row-span-2">
                             <!--Git-->
                             <div id="git_skill" style="cursor: pointer;" onclick="card_skill('git_skill_1', 'git_skill_2', 'git_skill')" class="bg-orange-400 skill_grid relative opacity-0">
                                 <img id="git_skill_1" src="/src/media/skills/Git-logo.png" alt="" class="h-8 max-sm:h-4 absolute bottom-5 max-sm:bottom-3 left-4 max-sm:left-3">
-                                <p id="git_skill_2" style="display: none;" class="font-light text-orange-100 absolute px-2 text-[16px] max-sm:text-[8.5px] top-3 max-sm:top-2">Conhecimento dos principais comandos de versionamento de código; Utilização em projetos, integrado ao GitHub.</p>
+                                <p id="git_skill_2" style="display: none;" class="font-light text-orange-100 absolute px-2 text-[16px] max-sm:text-[8.5px] max-lg:text-[15px] top-3 max-lg:top-2">Conhecimento dos principais comandos de versionamento de código; Utilização em projetos, integrado ao GitHub.</p>
                             </div>
                             <!--Resolução-->
                             <div id="resolucao_skill" style="cursor: pointer;" onclick="card_skill('resolucao_skill_1', 'resolucao_skill_2', 'resolucao_skill')" class="bg-green-700 skill_grid relative opacity-0">
                                 <img id="resolucao_skill_1" src="/src/media/skills/resolucao.png" alt="" class="h-10 absolute bottom-2 left-3 max-sm:left-1 invert">
-                                <p id="resolucao_skill_2" style="display: none;" class="font-light text-indigo-100/90 absolute px-2 text-[16px] max-sm:text-[8.8px] top-3 max-sm:top-2">Capacidade de resolução de problemas, desenvolvida em virtude da participação em olímpiadas de conhecimento.</p>
+                                <p id="resolucao_skill_2" style="display: none;" class="font-light text-indigo-100/90 absolute px-2 text-[16px] max-sm:text-[8.8px] max-lg:text-[14.7px] top-3 max-lg:top-2">Capacidade de resolução de problemas, desenvolvida em virtude da participação em olímpiadas de conhecimento.</p>
                             </div>
                         </div>
                     </div>
@@ -489,12 +489,12 @@
                         <!--MySQL-->
                         <div id="mysql_skill" style="cursor: pointer;" onclick="card_skill('mysql_skill_1', 'mysql_skill_2', 'mysql_skill')" class="bg-slate-100 skill_grid relative opacity-0">
                             <img id="mysql_skill_1" src="/src/media/skills/mysql-logo.png" alt="" class="h-20 max-sm:h-12 absolute bottom-2 left-6 max-sm:left-3">
-                            <p style="display: none;" id="mysql_skill_2" class="font-light text-slate-500 px-4 max-sm:px-2 max-sm:text-[10px] absolute max-sm:top-2 top-5">Proficiente no desenvolvimento e manipulação de bancos de dados em SQL, com ênfase em operações CRUD.</p>
+                            <p style="display: none;" id="mysql_skill_2" class="font-light text-slate-500 px-4 max-sm:px-2 max-sm:text-[10px] absolute max-lg:top-2 top-5">Proficiente no desenvolvimento e manipulação de bancos de dados em SQL, com ênfase em operações CRUD.</p>
                         </div>
                         <!--Tailwind-->
                         <div id="tailwind_skill"  style="cursor: pointer;" onclick="card_skill('tailwind_skill_1', 'tailwind_skill_2', 'tailwind_skill')" class="bg-cyan-900 skill_grid relative opacity-0">
                             <img id="tailwind_skill_1" src="/src/media/skills/tailwind-logo.svg" alt="" class="h-4 max-sm:h-2 absolute bottom-8 max-sm:bottom-4 left-6 max-sm:left-3">
-                            <p id="tailwind_skill_2" style="display: none;" class="font-light text-cyan-50/70 px-2 absolute max-sm:text-[9.3px] top-5 max-sm:top-2 max-sm:left-0 left-1">Conhecimento das principais classes do Tailwind CSS, com aplicação prática em alguns projetos de desenvolvimento de interfaces responsivas.</p>
+                            <p id="tailwind_skill_2" style="display: none;" class="font-light text-cyan-50/70 px-2 absolute max-sm:text-[9.3px] top-5 max-lg:top-2 max-sm:left-0 left-1">Conhecimento das principais classes do Tailwind CSS, com aplicação prática em alguns projetos de desenvolvimento de interfaces responsivas.</p>
                         </div>
                     </div>
 
@@ -503,18 +503,18 @@
                             <!--PHP-->
                             <div id="php_skill" style="cursor: pointer;" onclick="card_skill('php_skill_1', 'php_skill_2', 'php_skill')" class="bg-[#73769c] skill_grid relative opacity-0">
                                 <img id="php_skill_1" src="/src/media/skills/PHP-logo-2.png" alt="" class="h-20 max-sm:h-12 absolute -bottom-4 max-sm:-bottom-2 left-1">
-                                <p id="php_skill_2" style="display: none;" class="font-light text-indigo-100 absolute px-2 text-[14px] max-sm:text-[8px] top-2 max-sm:top-1">Contato básico com a linguagem na integração com banco de dados MySQL.</p>
+                                <p id="php_skill_2" style="display: none;" class="font-light text-indigo-100 absolute px-2 text-[14px] max-sm:text-[8.8px] max-lg:text-[13px] top-2 max-lg:top-1">Contato básico com a linguagem na integração com banco de dados MySQL.</p>
                             </div>    
                             <div class="grid grid-cols-1 row-span-4 gap-1.5">
                                 <!--C#-->
                                 <div id="csharp_skill" style="cursor: pointer;" onclick="card_skill('csharp_skill_1', 'csharp_skill_2', 'csharp_skill')" class="bg-[#510af8] skill_grid relative opacity-0">
                                     <img id="csharp_skill_1" src="/src/media/skills/csharp-logo.png" alt="" class="h-10 max-sm:h-7 absolute bottom-2 max-sm:left-3 left-4">
-                                    <p id="csharp_skill_2" style="display: none;" class="font-light text-indigo-100/90 absolute px-2 text-[15.4px] max-sm:text-[8.7px] max-xl:text-[14px] top-2">Contato básico com a linguagem no desenvolvimento de jogos com a Unity.</p>
+                                    <p id="csharp_skill_2" style="display: none;" class="font-light text-indigo-100/90 absolute px-2 text-[15.4px] max-sm:text-[8.7px] max-lg:text-[13.8px] top-2">Contato básico com a linguagem no desenvolvimento de jogos com a Unity.</p>
                                 </div>
                                 <!--Unity-->
                                 <div id="unity_skill" style="cursor: pointer;" onclick="card_skill('unity_skill_1', 'unity_skill_2', 'unity_skill')" class="bg-slate-800 skill_grid relative opacity-0">
                                     <img id="unity_skill_1" src="/src/media/skills/unity-logo.png" alt="" class="h-10 max-sm:h-7 absolute bottom-2 left-3 invert">
-                                    <p id="unity_skill_2" style="display: none;" class="font-light text-indigo-100/90 absolute px-2 text-[15.6px] max-sm:text-[8.7px] top-3 max-sm:top-2">Compreesão da estrutura e funcionamento além de experiência prática.</p>
+                                    <p id="unity_skill_2" style="display: none;" class="font-light text-indigo-100/90 absolute px-2 text-[15.6px] max-sm:text-[8.7px] max-lg:text-[14px] top-3 max-lg:top-2">Compreesão da estrutura e funcionamento além de experiência prática.</p>
                                 </div>
                                 <!--English-->
                                 <div id="english_skill" style="cursor: pointer;" onclick="card_skill('english_skill_1', 'english_skill_2', 'english_skill')" class="bg-[#ff0000] skill_grid relative opacity-0">
@@ -529,7 +529,7 @@
                                 <!--JS-->
                                 <div id="javascript_skill" style="cursor: pointer;" onclick="card_skill('javascript_skill_1', 'javascript_skill_2', 'javascript_skill')" class="bg-[#ebc907] skill_grid relative opacity-0"> 
                                     <img id="javascript_skill_1" src="/src/media/skills/javascript-logo.png" alt="" class="h-14 max-sm:h-8 absolute bottom-5 max-sm:bottom-3 left-5 max-sm:left-3">
-                                    <p id="javascript_skill_2" style="display: none;" class="font-light text-yellow-950/80 text-[14.6px] max-sm:text-[8.4px] absolute top-2 px-2">Conhecimento prático em JavaScript, com aplicação em projetos e implementação de scripts para algumas funcionalidades.</p>
+                                    <p id="javascript_skill_2" style="display: none;" class="font-light text-yellow-900/80 text-[14.6px] max-sm:text-[9px] max-lg:text-[14px] absolute top-2 px-2">Conhecimento prático em JavaScript, com aplicação em projetos e implementação de scripts para algumas funcionalidades.</p>
                                 </div>
                                 <!--HTML-->
                                 <div id="html_skill" style="cursor: pointer;" onclick="card_skill('html_skill_1', 'html_skill_2', 'html_skill')" class="bg-[#f74904] skill_grid relative opacity-0">
