--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
             <!--Courses grid-->
             <div class="grid max-sm:w-full max-lg:grid-cols-1 lg:grid-cols-1 xl:grid-cols-2 gap-4 place-content-center w-[64rem] h-[20rem] mx-auto max-sm:p-2 md:w-[33rem] max-lg:w-full lg:w-full ">
                 <!--Course one-->
-                <div id="curso1" class="bg-white rounded-md rounded-br-sm rounded-tl-3xl px-4 py-2 grid grid-cols-3 items-center mx-[1px] opacity-0 hover:scale-105 hover:shadow-xl transition delay-100">
+                <div id="curso1" class="bg-white rounded-md rounded-br-sm rounded-tl-3xl px-4 py-2 grid grid-cols-3 items-center mx-[1px] opacity-0 transition hover:scale-[103%] hover:shadow-xl delay-100">
                     <div class="col-span-2">
                         <h1 class="font-semibold max-sm:text-base text-lg text-slate-900 w-60">Programação Básica</h1>
                         <ul class="list-disc pl-6 max-sm:pl-4">
@@ -234,7 +234,7 @@
                     </button>
                 </div>
                 <!--Course two-->
-                <div id="curso2" class="bg-white rounded-md rounded-bl-sm rounded-tr-3xl px-4 py-2 grid grid-cols-3 items-center mx-[1px] opacity-0 hover:scale-105 hover:shadow-xl transition delay-100">
+                <div id="curso2" class="bg-white rounded-md rounded-bl-sm rounded-tr-3xl px-4 py-2 grid grid-cols-3 items-center mx-[1px] opacity-0 transition hover:scale-[103%] hover:shadow-xl delay-100">
                     <div class="col-span-2">
                         <h1 class="font-semibold max-sm:text-base text-lg text-slate-900 w-60">Modelagem de Dados e Projetos Lógicos com SQL</h1>
                         <ul class="list-disc pl-6 max-sm:pl-4">
@@ -246,7 +246,7 @@
                     <button type="button" onclick="view_certificate2('certificado_sql1','course_tab', 'education', 'img_tab')" class="bg-indigo-600 transition_button hover:bg-[#ff6f00] text-white font-semibold whitespace-nowrap max-sm:text-xs text-md rounded-md h-8 max-sm:h-6 w-auto mr-5 max-sm:mr-3">Ver certificado</button>
                 </div>
                 <!--Course three-->
-                <div id="curso3" class="bg-white rounded-md rounded-bl-3xl rounded-tr-sm px-4 py-2 grid grid-cols-3 items-center mx-[1px] opacity-0 hover:scale-105 hover:shadow-xl transition delay-100">
+                <div id="curso3" class="bg-white rounded-md rounded-bl-3xl rounded-tr-sm px-4 py-2 grid grid-cols-3 items-center mx-[1px] opacity-0 transition hover:scale-[103%] hover:shadow-xl delay-100">
                     <div class="col-span-2">
                         <h1 class="font-semibold max-sm:text-base text-lg text-slate-900 w-60">Bootcamp | Python Ciência de Dados</h1>
                         <ul class="list-disc pl-6 max-sm:pl-4">
@@ -258,7 +258,7 @@
                     <button type="button" onclick="view_certificate2('certificado_python', 'course_tab', 'education', 'img_tab')" class="bg-indigo-600 transition_button hover:bg-[#ff6f00] text-white font-semibold whitespace-nowrap max-sm:text-xs text-md rounded-md h-8 max-sm:h-6 w-auto mr-5 max-sm:mr-3">Ver certificado</button>
                 </div>
                 <!--Course four-->
-                <div id="curso4" class="bg-white rounded-md rounded-br-3xl rounded-tl-sm px-4 py-2 grid grid-cols-3 items-center mx-[1px] opacity-0 hover:scale-105 hover:shadow-xl transition delay-100">
+                <div id="curso4" class="bg-white rounded-md rounded-br-3xl rounded-tl-sm px-4 py-2 grid grid-cols-3 items-center mx-[1px] opacity-0 transition hover:scale-[103%] hover:shadow-xl delay-100">
                     <div class="col-span-2">
                         <h1 class="font-semibold max-sm:text-base text-lg text-slate-900 w-60">MySQL</h1>
                         <ul class="list-disc pl-6 max-sm:pl-4">
@@ -574,7 +574,7 @@
 
     <section id="contact" class="h-[15rem] bg-slate-900 flex-col text-center  z-10">
         <div class="inline-flex max-sm:flex max-sm:flex-col gap-5 items-center mt-24 max-sm:mt-0 max-sm:p-12">
-            <button class="bg-slate-950 rounded-full px-5 py-2 flex items-center transition hover:-translate-y-1 hover:bg-black/67">
+            <button class="bg-slate-950 rounded-full px-5 py-2 flex items-center transition hover:-translate-y-1 hover:bg-yellow-500">
                 <a href="https://github.com/ruanllima" target="_blank" rel="noopener noreferrer" class="font-nexa max-sm:font-light  text-slate-100 inline-flex items-center gap-1 max-sm:text-xs">
                     <svg class="invert h-5 w-5">
                         <image href="/src/media/GitHub.png" width="100%" height="100%"></image>
@@ -582,7 +582,7 @@
                 </a>
             </button>
 
-            <button class="bg-slate-950 rounded-full px-5 py-2 flex items-center transition hover:-translate-y-1 hover:bg-black/67">
+            <button class="bg-slate-950 rounded-full px-5 py-2 flex items-center transition hover:-translate-y-1 hover:bg-yellow-500">
                 <a href="https://www.linkedin.com/in/ruanllima" target="_blank" rel="noopener noreferrer" class="font-nexa max-sm:font-light  text-slate-100 inline-flex items-center gap-1 max-sm:text-xs">
                     <svg class="invert h-5 w-5 max-sm:h-4 max-sm:w-4">
                         <image href="/src/media/linkedin.png" width="100%" height="100%"></image>
@@ -590,7 +590,7 @@
                 </a>
             </button>
 
-            <button id="copy-btn" onclick="copy_to_clipboard('ruanlimafn@gmail.com')" class="relative bg-slate-950 rounded-full px-5 py-2 items-center inline-flex gap-1 transition hover:-translate-y-1 hover:bg-black/67">
+            <button id="copy-btn" onclick="copy_to_clipboard('ruanlimafn@gmail.com')" class="relative bg-slate-950 rounded-full px-5 py-2 items-center inline-flex gap-1 transition hover:-translate-y-1 hover:bg-yellow-500">
                 <svg class="invert h-5 w-5 max-sm:h-4 max-sm:w-4">
                     <image href="/src/media/email.png" width="100%" height="100%"></image>
                 </svg>
@@ -638,11 +638,11 @@
             header.classList.add(classBg);
 
             // Parallax effect
-            document.querySelector(".parallax").style.transform = `translateY(${scrollPosition * 0.4}px)`;
+            document.querySelector(".parallax").style.transform = `translateY(${scrollPosition * 0.32}px)`;
     });
         document.addEventListener("DOMContentLoaded", () =>{
             let scrollPosition = window.scrollY;
-            document.querySelector(".parallax").style.transform = `translateY(${scrollPosition * 0.4}px)`;
+            document.querySelector(".parallax").style.transform = `translateY(${scrollPosition * 0.32}px)`;
             initBg = scrollPosition == 0 ? "bg-indigo-600/0" : "bg-indigo-600/96";
             console.log(scrollPosition);
             header.classList.add(initBg);
