Fixing bug in 'projects' design

--- a/index.html
+++ b/index.html
@@ -433,8 +433,8 @@
 
                 <!--Project four-->
                 
-                <div class="w-screen h-screen relative">
-                    <div style="display: none;" id="game_iframe" class="fixed inset-0 flex items-center justify-center z-50 max-lg:hidden ">
+                <div id="game_iframe" style="display: none;" class="w-screen h-screen relative">
+                    <div class="fixed inset-0 flex items-center justify-center z-50 max-lg:hidden ">
                         <div class="fixed inset-0 w-screen bg-black/70 backdrop-blur-xs z-40"></div> 
                         <div class=" z-50 w-11/12 md:w-3/4 h-full bg-white rounded-lg">
                             <iframe scrolling="no" src="https://delightful-semolina-2b94e0.netlify.app" frameborder="0" class="w-full h-[99%] border-0"></iframe>
