Some changes in 'skills

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                 </div>
             </div>
             
-            <div class="flex place-content-center pb-20 pt-20 max-lg:pt-32 max-xl:pt-40">
+            <div id="view_all_certificates" class="flex place-content-center pb-20 pt-20 max-lg:pt-32 max-xl:pt-40 opacity-0">
                 <button type="button" onclick="view_tab('certificados', '', '', 'education')" class="bg-indigo-600 transition_button hover:bg-[#ff6f00] text-slate-100 font-semibold whitespace-nowrap max-sm:text-xs text-lg rounded-md p-1 px-3">
                     Visualizar todos os certificados</button>
             </div>
