Modifying the 'section redirect' : adding section redirect with javascript  : now, the id does not appear in the url

--- a/index.html
+++ b/index.html
@@ -654,6 +654,7 @@
     <script src="/src/js/observer.js"></script>
     <script src="/src/js/view.js"></script>
     <script src="/src/js/script.js"></script>
+    <script src="/src/js/Jquery/jquery-3.7.1.min.js"></script>
     <script>
         document.addEventListener("scroll", () => {
             const header = document.getElementById("header");
