--- a/index.html
+++ b/index.html
@@ -562,24 +562,24 @@
 
     </section>
 
-    <section id="cta" class="h-auto pb-36 bg-slate-100 z-10 relative">
+    <section id="cta" class="h-auto pb-36 bg-slate-50 z-10 relative">
         <div class="flex flex-col place-content-center text-center mx-auto pt-32">
             <h1 id="cta1" class="text-indigo-600 font-black font-coolvetica text-7xl max-sm:text-5xl opacity-0">Despertei seu interesse?</h1>
             <h2 id="cta2" class="text-indigo-400 font-light text-3xl max-sm:text-base pt-7 opacity-0">Sinta-se à vontade para entrar em contato comigo.</h2>
 
-            <div id="cta3" class="bg-slate-200/45 mx-auto max-xl:w-[60vh] w-[80vh] max-sm:w-screen mt-12 rounded-md opacity-0">
+            <div id="cta3" class=" mx-auto max-xl:w-[60vh] w-[80vh] max-sm:w-screen mt-12 opacity-0">
                 <form id="email_form" method="POST" class="flex flex-col place-content-center items-center p-10 mx-auto pb-14">
                     <input type="text" id="name" name="name" placeholder="Seu nome" required class="input_email">
                     <input type="email" id="email" name="email" placeholder="Seu email" required class="input_email">
                     <input type="hidden" name="_captcha" value="false">
                     <input type="text" name="_honey" style="display: none;">
-                    <textarea id="message" name="message" rows="5" placeholder="Mensagem" required class="input_email"></textarea>
+                    <textarea id="message" name="message" oninput="adjustHeight(this)" rows="1" placeholder="Mensagem" required class="input_email mt-1"></textarea>
                     <button id="submit_button" type="submit" class="button_email mt-2 relative">Send
-                        <div style="display: none;" id="loading_icon" class="absolute inset-0 flex justify-center top-16">
+                        <div style="display: none" id="loading_icon" class="absolute inset-0 flex justify-center top-16">
                             <div class="inline-flex gap-1">
-                                <div class="w-3 h-6 bg-[#076fe5] animate-keys-loading"></div>
-                                <div style="animation-delay: 200ms;" class="w-3 h-6 bg-[#076fe5] animate-keys-loading"></div>
-                                <div style="animation-delay: 300ms;" class="w-3 h-6 bg-[#076fe5] animate-keys-loading"></div>
+                                <div class="w-[10px] h-6 bg-[#ff6f00] animate-keys-loading"></div>
+                                <div style="animation-delay: 200ms;" class="w-[10px] h-6 bg-[#ff6f00] animate-keys-loading"></div>
+                                <div style="animation-delay: 300ms;" class="w-[10px] h-6 bg-[#ff6f00] animate-keys-loading"></div>
                             </div>
                         </div>
                     </button>
@@ -593,7 +593,7 @@
         </div>
 
         <div style="display: none" id="success_popup">
-            <div class="alert_positive absolute bottom-20 left-1/3 right-1/3">
+            <div class="alert_positive absolute bottom-32 left-1/3 right-1/3">
                 <div class="flex-shrink-0 text-green-500 mr-3">
                     <svg stroke="currentColor" fill="none" stroke-width="2" viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round"
                     height="28" width="28" class="h-7 w-7" xmlns="http://www.w3.org/2000/svg">
