Adding redirection between pages (pt-br & en)

--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
                             </a>
                         </div>
                     </li>
+                    <li class="flex items-center pl-4">
+                        <div id="flag_div" onmouseenter="flag_change()" class="flex items-center transition hover:scale-110">
+                            <a href="/en/"><img id="flag" style="cursor: pointer" src="/src/media/brasil.png" alt="" class="h-5 w-[30px] rounded-sm "></a>
+                        </div>
+                    </li>
                     
                 </ul>
             </nav>
