Main page all pt-br

--- a/en/index.html
+++ b/en/index.html
@@ -417,7 +417,7 @@
                     </div>
                     
                     <div class="pt-5 pr-2 relative max-sm:mx-5 max-sm:mb-3">
-                        <h1 class="font-coolvetica text-indigo-600 ">Maceió Commerce EDA</h1>
+                        <h1 class="font-coolvetica text-indigo-600 ">Commerce of Maceió EDA</h1>
                         <p class="text-slate-400 font-light">Exploratory data analysis of Maceió commerce using Python and competent libraries. Graphs, heatmaps, and data dossier.</p>
                         <div class="flex place-content-center text-center max-sm:pt-20">
                             <a href="https://github.com/ruanllima/eda_commerce_mcz" target="_blank" rel="noopener noreferrer" class="w-full mb-5 absolute bottom-1">
