--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                     </div>
                     
                     <div class="pt-5 pr-2 relative max-sm:mx-5 max-sm:mb-3">
-                        <h1 class="font-coolvetica text-indigo-600 ">Maceió Commerce EDA</h1>
+                        <h1 class="font-coolvetica text-indigo-600 ">Commerce of Maceió EDA</h1>
                         <p class="text-slate-400 font-light">Análise exploratória de dados do comércio de Máceio através da linguagem python e bibliotecas competentes. Gráficos, heatmaps e dossiê dos dados coletados.</p>
                         <div class="flex place-content-center text-center max-sm:pt-20">
                             <a href="https://github.com/ruanllima/eda_commerce_mcz" target="_blank" rel="noopener noreferrer" class="w-full mb-5 absolute bottom-1">
@@ -481,7 +481,7 @@
 
             <!--Header Texts-->
             <div class="w-full text-center p-10 pt-36">
-                <h1 id="title" class="font-black text-6xl max-sm:text-5xl text-zinc-100 opacity-0">Skills</h1>
+                <h1 id="title" class="font-black text-6xl max-sm:text-5xl text-zinc-100 opacity-0">Habilidades</h1>
             </div>
             <div class="w-full text-center p-2">
                 <h1 id="title" class="font-light text-3xl max-sm:text-xl max-lg:text-2xl text-zinc-500 opacity-0">Quanto maior a área do card, maior o domínio da tecnologia.</h1>
@@ -591,7 +591,7 @@
                     <input type="hidden" name="_captcha" value="false">
                     <input type="text" name="_honey" style="display: none;">
                     <textarea id="message" name="message" oninput="adjustHeight(this)" rows="1" placeholder="Mensagem" required class="input_email mt-1"></textarea>
-                    <button id="submit_button" type="submit" class="button_email mt-2 relative">Send
+                    <button id="submit_button" type="submit" class="button_email mt-2 relative">Enviar
                         <div style="display: none" id="loading_icon" class="absolute inset-0 flex justify-center top-16">
                             <div class="inline-flex gap-1">
                                 <div class="w-[10px] h-6 bg-[#ff6f00] animate-keys-loading"></div>
@@ -663,7 +663,7 @@
 
     <section class="bg-slate-900">
         <div class="flex text-center place-content-center mb-3">
-            <a href="https://github.com/ruanllima/portfolio" target="_blank" rel="noopener noreferrer" class="font-light max-sm:text-xs text-slate-500 hover:underline underline-offset-2">Repository of this website.</a>
+            <a href="https://github.com/ruanllima/portfolio" target="_blank" rel="noopener noreferrer" class="font-light max-sm:text-xs text-slate-500 hover:underline underline-offset-2">Repositório deste site.</a>
 
         </div>
 
