GTM fixing bug (possible inconsistency in tag data)

--- a/en/index.html
+++ b/en/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" class="h-full">
 <head>
-    <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-MBQ7LPSH');</script>
-    <!-- End Google Tag Manager -->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-EE6NVDQHQ0"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-EE6NVDQHQ0');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ruan Lima | Portfolio</title>
@@ -60,7 +62,7 @@
                         <li id="header_skills" class="header_text text-slate-100"><a href="#skills">Skills</a></li>
                     </div>
                     
-                    <li class="translate-y-1 pl-1">
+                    <li class="translate-y-1 pl-3">
                         <div class="inline-flex items-center gap-4">
                             <a id="header_github" href="https://github.com/ruanllima" target="_blank" rel="noopener noreferrer" class=" group">
                             
@@ -156,7 +158,7 @@
                 <div id="txt_about1" class="mt-6 opacity-0">
                     <h1 class="text-indigo-600 text-xl font-coolvetica">Who I am</h1>
                     <hr class="text-slate-300 mt-1">
-                    <p class="font-light text-slate-500 text-lg mt-2">I am an 18-year-old, resident of Maceió-AL, passionate about music, technology, and innovation, and I constantly seek to learn and explore new areas of knowledge. I attended most of my school life in public institutions, but that was not an impediment to excelling in exact or technological sciences. Even after finishing high school, I remain focused on acquiring new knowledge and further improving my programming skills.
+                    <p class="font-light text-slate-500 text-lg mt-2">I am an 18-year-old, resident in the state of Alagoas, Brazil, passionate about music, technology, and innovation, and I constantly seek to learn and explore new areas of knowledge. I attended most of my school life in public institutions, but that was not an impediment to excelling in exact or technological sciences. Even after finishing high school, I remain focused on acquiring new knowledge and further improving my programming skills.
                     </p>
                 </div>
                 <img id="img_about1" src="/src/media/IMG1.jpg" alt="Campus Party Nordeste 2024" class="hidden max-md:flex h-auto rounded-md opacity-0">
