placing the favicon at the root of the project

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ruan Lima | Portfólio</title>
-    <link rel="shortcut icon" href="/src/media/icon.ico">
+    <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="/src/css/output.css">
 </head>
 <style>
